--- a/force-app/main/default/classes/ClassOnQuoteEmailSend.cls
+++ b/force-app/main/default/classes/ClassOnQuoteEmailSend.cls
@@ -23,6 +23,7 @@ public class ClassOnQuoteEmailSend {
                         wrap.islineItemAvailable=false;
                     }
                     wrap.objquote=Qtt[0];
+                    wrap.Subject ='Quotation';
                     if(wrap.objquote.Contact_Name__r.name!=null){
                         wrap.emailbody='Hello Mr.'+' '+wrap.objquote.Contact_Name__r.name +',';
                         wrap.emailbody= wrap.emailbody+' \n'+'\nPlease Find the attached Quotation.\n'+'Thank you.';
@@ -43,13 +44,14 @@ public class ClassOnQuoteEmailSend {
     public static void send(String QuotRecId,String sub,String Bodyy , String mailAdd , string ccAdd){
         system.debug('class calling...');
         List<Messaging.SingleEmailMessage> mails =  new List<Messaging.SingleEmailMessage>();     
+         
+        list<Quote__c> Qtt=[select id,name,RecordType.DeveloperName,Contact_Name__r.name from Quote__c where id=:QuotRecId limit 1];
         
-        list<Quote__c> Qtt=[select id,name,Contact_Name__r.name from Quote__c where id=:QuotRecId limit 1];
-        
-        for(Quote__c at:Qtt){
-
+        for(Quote__c at:Qtt)
+        {
             system.debug('at+id'+at.id);
-            
+            if(at.RecordType.DeveloperName=='Sales')
+            {
             PageReference defaultPage = page.QuotePdf; 
             
             Attachment attachdoc = new Attachment();
@@ -65,15 +67,24 @@ public class ClassOnQuoteEmailSend {
             Messaging.EmailFileAttachment attach = new Messaging.EmailFileAttachment();
             attach.setBody(pageData);
             attach.setContentType('application/pdf');
-            attach.setFileName(at.Name+'.pdf'); 
+            attach.setFileName(at.Name+'.pdf');
+            
+            
             Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
             mail.setFileAttachments(new Messaging.EmailFileAttachment[] {attach});
-            List < String > sendTo = mailAdd.split(',');           
+            
+            // List<String> sendTo = new List<String>();
+            //sendTo.add(mailAdd);
+            List < String > sendTo = mailAdd.split(',');
+            
             mail.setToAddresses(sendTo);
             system.debug('');
             
-            if(ccAdd!=null && ccAdd!=''){ 
+            if(ccAdd!=null && ccAdd!=''){
+                //List<String> ccsendTo = new List<String>();
+                //ccsendTo.add(ccAdd); 
                 List < String > ccsendTo = ccAdd.split(',');
+                
                 mail.setCcAddresses(ccsendTo);
             }
             mail.setReplyTo(UserInfo.getUserEmail()); 
@@ -89,10 +100,117 @@ public class ClassOnQuoteEmailSend {
             attachdoc.ParentId = at.Id;
             attachdoc.IsPrivate=false;
             insert attachdoc;
+            }
+            //////////////////////////////////
+            else if(at.RecordType.DeveloperName=='AMC')
+            {
+            PageReference defaultPage = page.AMCQuote; 
+            
+            Attachment attachdoc = new Attachment();
+            
+            defaultPage.getParameters().put('id',at.Id); //passing in id for specific record
+            Blob pageData; //variable to hold binary PDF data.
+            
+            if(!Test.isRunningTest())
+                pageData = defaultPage.getContentAsPDF();
+            else 
+                pageData = Blob.valueOf('This is a test.');
+            
+            Messaging.EmailFileAttachment attach = new Messaging.EmailFileAttachment();
+            attach.setBody(pageData);
+            attach.setContentType('application/pdf');
+            attach.setFileName(at.Name+'.pdf');
+            
+            
+            Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
+            mail.setFileAttachments(new Messaging.EmailFileAttachment[] {attach});
+            
+            // List<String> sendTo = new List<String>();
+            //sendTo.add(mailAdd);
+            List < String > sendTo = mailAdd.split(',');
+            
+            mail.setToAddresses(sendTo);
+            system.debug('');
+            
+            if(ccAdd!=null && ccAdd!=''){
+                //List<String> ccsendTo = new List<String>();
+                //ccsendTo.add(ccAdd); 
+                List < String > ccsendTo = ccAdd.split(',');
+                
+                mail.setCcAddresses(ccsendTo);
+            }
+            mail.setReplyTo(UserInfo.getUserEmail()); 
+            mail.setSenderDisplayName(UserInfo.getName());  
+            mail.setSaveAsActivity(true);
+            mail.setWhatId(at.id);
+            mail.setSubject(sub);
+            mail.setPlainTextBody(Bodyy);
+            mails.add(mail);
+            
+            attachdoc.Body=pageData;   
+            attachdoc.Name = at.name + ' ' + 'Quote' + '.pdf';
+            attachdoc.ParentId = at.Id;
+            attachdoc.IsPrivate=false;
+            insert attachdoc;
+            }
+            /////////////////////////////////
+            else if(at.RecordType.DeveloperName=='Service')
+            {
+            PageReference defaultPage = page.ServiceQuote; 
+            
+            Attachment attachdoc = new Attachment();
+            
+            defaultPage.getParameters().put('id',at.Id); //passing in id for specific record
+            Blob pageData; //variable to hold binary PDF data.
+            
+            if(!Test.isRunningTest())
+                pageData = defaultPage.getContentAsPDF();
+            else 
+                pageData = Blob.valueOf('This is a test.');
+            
+            Messaging.EmailFileAttachment attach = new Messaging.EmailFileAttachment();
+            attach.setBody(pageData);
+            attach.setContentType('application/pdf');
+            attach.setFileName(at.Name+'.pdf');
+            
+            
+            Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
+            mail.setFileAttachments(new Messaging.EmailFileAttachment[] {attach});
+            
+            // List<String> sendTo = new List<String>();
+            //sendTo.add(mailAdd);
+            List < String > sendTo = mailAdd.split(',');
+            
+            mail.setToAddresses(sendTo);
+            system.debug('');
+            
+            if(ccAdd!=null && ccAdd!=''){
+                //List<String> ccsendTo = new List<String>();
+                //ccsendTo.add(ccAdd); 
+                List < String > ccsendTo = ccAdd.split(',');
+                
+                mail.setCcAddresses(ccsendTo);
+            }
+            mail.setReplyTo(UserInfo.getUserEmail()); 
+            mail.setSenderDisplayName(UserInfo.getName());  
+            mail.setSaveAsActivity(true);
+            mail.setWhatId(at.id);
+            mail.setSubject(sub);
+            mail.setPlainTextBody(Bodyy);
+            mails.add(mail);
+            
+            attachdoc.Body=pageData;   
+            attachdoc.Name = at.name + ' ' + 'Quote' + '.pdf';
+            attachdoc.ParentId = at.Id;
+            attachdoc.IsPrivate=false;
+            insert attachdoc;
+            }
         }   
         if(mails.size()>0){
             Messaging.sendEmail(mails);
-        }  
+        }
+        
+        
     }
     public class wrappercl{
         public string errorMessage;
@@ -100,6 +218,7 @@ public class ClassOnQuoteEmailSend {
         public boolean success;
         public  quote__c objquote;
         public string emailbody;
+        public string Subject;
         public boolean islineItemAvailable;
     }
 }
